--- a/data/tasks.json
+++ b/data/tasks.json
@@ -1,1 +1,10 @@
-[]
+[
+  {
+    "title": "Sleeping",
+    "completed": true,
+    "created_at": "2025-06-05T15:41:09.243686",
+    "due_date": "2050-08-12",
+    "priority": 3,
+    "category": "Bhalo khub valo !!"
+  }
+]
